# fincode

./: .gitignore  ALG.md  GRAHAM.md  README.md  TODO.md  fincode.py  main.py  pyproject.toml  requests.http  saida.txt
docs/: ALG.md
examples/: fluxo_de_uso.py
exemples/: fluxo_de_uso.py  main.py
fincode/: __init__.py  core.py  main.py  utils.py
rest_client/: rad_form_search.http
tests/: test_fincode.py  test_fincode_gets.py  test_fincode_search.py  test_fincode_searching.py  test_regex.py  test_utils.py
