[tool.poetry]
name = "fincode"
version = "0.1.0"
description = ""
authors = ["dfelipe <dfelipe@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.6.0"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
asyncio = "^3.4.3"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
pandas = "^1.5.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
